--- a/app.json
+++ b/app.json
@@ -9,5 +9,10 @@
     "navigationBarTitleText": "小程序Demo",
     "navigationBarTextStyle":"black"
   },
-  "debug":true
+  "debug":true,
+  "permission": {
+    "scope.userLocation": {
+      "desc": "你的位置信息将用于小程序位置接口的效果展示"
+    }
+  }
 }
